添加转场动画和头像翻转效果

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,34 +14,32 @@
         <activity
             android:name=".PaintAndCanvasActivity"
             android:hardwareAccelerated="false"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity android:name=".CanvasTestActivity" />
         <activity android:name=".BaseActivity" />
         <activity
             android:name=".PictureActivity"
-            android:hardwareAccelerated="false"/>
+            android:hardwareAccelerated="false" />
         <activity
             android:name=".NetRaiderActivity"
             android:hardwareAccelerated="false"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".TransLateActivity"
             android:hardwareAccelerated="false"
-            android:screenOrientation="portrait"
-            >
-        </activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".LoadingCircleActivity"
             android:hardwareAccelerated="false"
-            android:screenOrientation="portrait"
-            >
+            android:screenOrientation="portrait" />
+        <activity android:name=".RotationHeadPicActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
+        <activity android:name=".OPT2Activity"></activity>
     </application>
 
 </manifest>
