测试错切效果

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         <activity
             android:name=".PaintAndCanvasActivity"
             android:hardwareAccelerated="false"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity android:name=".CanvasTestActivity" />
         <activity android:name=".BaseActivity" />
         <activity
@@ -33,13 +33,15 @@
             android:hardwareAccelerated="false"
             android:screenOrientation="portrait" />
         <activity android:name=".RotationHeadPicActivity">
+        </activity>
+        <activity android:name=".OPT2Activity" />
+        <activity android:name=".SkewPicActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".OPT2Activity"></activity>
     </application>
 
 </manifest>
